app/javascript/entrypoints/admin_ui.scss
// TODO: Add stuff!


// @import "../stylesheets/admin_ui/admin_ui_global.css";

// If you want to modify theme colors:
// @import "~bootstrap/scss/functions";
// @import "~bootstrap/scss/variables";
// @import "~bootstrap/scss/mixins";

/* Global CSS styles */
#main-layout-body a { 
  color: rgba(13, 202, 240);
  font-weight: 500;
}

/* Override active pill background color (default is primary) in Nav (sites-layout-navbar.tsx) */
.navbar-nav .nav-link.active {
    background-color: white !important;
}

// Customizing accordions in the homepage images form on the subsite general properties management page:
div#homepage-image-forms {
    background-color: rgb(240, 240, 240);
}

.subtle-light-blue-background {
    background-color: #ddecfb;
}

.subtle-light-grey-background {
    background-color: #e6e6e6;
}


/* Override Bootstrap React Styles */
// $bs-accordion-bg: teal; /* Changes the background color. */
// $bs-accordion-color: teal; /*Changes the text color.
// --bs-accordion-border-radius: Changes the border radius.
// --bs-accordion-btn-focus-box-shadow: Removes the blue outline when an item is focused. */

@import "bootstrap5";
@import "../stylesheets/fontawesome-pro";

